Try to prevent external resources from going too small on Android in landscape

--- a/logology-v12/src/www/scss/views/_DefinitionViewController.scss
+++ b/logology-v12/src/www/scss/views/_DefinitionViewController.scss
@@ -17,6 +17,9 @@
         [is="y-text-container"]:nth-child(2) {
             flex: 1 0 auto;
         }
+        [is="y-list"] {
+            flex: 0 0 auto;
+        }
     }
     ol {
         list-style-type: none;
